cta button alignment fixes

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -309,7 +309,10 @@
 .ctaDiv {
   padding: 1em;
   min-width: 17em;
-  align-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .ctaColumn {
   display: flex;
@@ -462,9 +465,6 @@
   .citationImg {
     width: 40px;
     height: 40px;
-  }
-  #ctaSubscribe {
-    padding-top: 2.5em;
   }
 }
 @media screen and (max-width: 414px) {
